--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
 <li>
-<span class="comment-author"><%= link_to comment.author.user_name, user_gallery_url(comment.author) %></span>: <%= comment.body %>
+<span class="comment-author"><%= link_to comment.author.user_name, user_gallery_url(comment.author) %></span>&nbsp;&nbsp;<%= comment.body %>
 </li>
 
