--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -6,7 +6,7 @@
   &nbsp;
 </section>
 
-<section class="main-column">
+<section class="main-column no-border">
   <section class="new-photo-form">
     <%= render "details", mode: :new, zip_codes: @zip_codes, photo: @photo %>
   </section>
