--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -6,7 +6,7 @@
   &nbsp;
 </section>
 
-<section class="main-column">
+<section class="main-column no-border">
   <section class="photo-feed">
     <%= render "photos/full_feed", photos: [@photo] %>
 
