--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,7 +7,7 @@
   &nbsp;
 </section>
 
-<section class="main-column">
+<section class="main-column no-border">
   <section class="user-edit-form">
     <%= render 'details', mode: :edit %>
 
