--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -65,6 +65,13 @@ textarea {
   width: auto;
 }
 
+textarea {
+  -webkit-appearance:none;
+  -webkit-user-select:none;
+  border: 0;
+  outline: 0;
+}
+
 button {
 
   /*
