--- a/app/assets/stylesheets/photos/full_feed.css
+++ b/app/assets/stylesheets/photos/full_feed.css
@@ -1,28 +1,34 @@
 .photo-feed li {
-    display:block;
-    width:650px;
-    margin-left:auto;
-    margin-right:auto;
-    padding-top:20px;
-    padding-bottom:20px;
+  display:block;
+  position:relative;
+  width:600px;
+  margin-left:auto;
+  margin-right:auto;
+  padding-top:20px;
+  padding-bottom:20px;
+}
 
-  }
+.photo-feed figure{
+  display:block;
+  position:relative;
+}
 
 .photo-feed img.content-photo {
-    width:650px;
-    margin-bottom:25px;
-  }
+  width:600px;
+  margin-bottom:25px;
+}
 
 .photo-feed figcaption {
-    font-size:10pt;
-  }
+  font-size:11pt;
+  text-align:middle;
+}
 
-.photo-feed img.avatar {
-    width:40px;
-    height:40px;
-  }
+/*.photo-feed img.avatar {
+  width:40px;
+  height:40px;
+}*/
 
-.photo-feed ul.tag-list {
+/*.photo-feed ul.tag-list {
   display:block;
   position:relative;
   height:40px;
@@ -36,4 +42,76 @@
   margin-bottom:10px;
   border: 1px solid #999;
   width:50px;
+}
+*/
+
+/*------------ CAPTION PIECES -----------------*/
+figcaption {
+  display:block;
+  position:relative;
+  margin-left:auto;
+  margin-right:auto;
+  width:500px;
+}
+
+figcaption > section {
+  display:block;
+  float:left;
+  position:relative;
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom:5px;
+  width:500px;
+}
+
+.posting-info img{
+  display:block;
+  float:left;
+  height:50px;
+  width:50px;
+}
+
+.person-and-place{
+  display:inline-block;
+  float:left;
+  padding-top:15px;
+  padding-left:20px;
+}
+
+.time{
+  display:inline-block;
+  float:right;
+  padding-top:15px;
+}
+
+.fc-label {
+  display: block;
+  float:left;
+  width:80px;
+  padding-right:20px;
+  font-weight:bold;
+  font-variant:small-caps;
+}
+
+.fc-content {
+  display: block;
+  float:left;
+  width:400px;
+}
+
+.fc-content li {
+  padding-top:0px;
+  padding-bottom:5px;
+  width:400px;
+}
+
+.comment-author {
+/*  font-weight:bold;*/
+/*  letter-spacing:1px;*/
+  color:#555;
+}
+
+.comment-form textarea {
+  width:500px;
+  height:2em;
 }
