--- a/app/views/zip_codes/_current_weather_summary.html.erb
+++ b/app/views/zip_codes/_current_weather_summary.html.erb
@@ -9,9 +9,9 @@
   <section class="stats">
     <%= link_to zip_code.city, zip_code_url(zip_code) %> <a
     href="#"
-    id="<%= zip_code.id %>"
     data-remote="true"
-    class="favorite summary-partial<% if signed_in? && current_user.favorite_zip_code_ids.include?(zip_code.id) %>
+    data-zip-code-id="<%= zip_code.id %>"
+    class="star <%= zip_code.id %> favorite summary-partial<% if signed_in? && current_user.favorite_zip_code_ids.include?(zip_code.id) %>
       <%= true %>
     <% else %>
       <%= false %>
@@ -38,25 +38,27 @@
   };
 
   $(document).ready(function(){
-    $(".favorite-form").addClass("hidden");
+    // $(".favorite-form").addClass("hidden");
+    //
+    // $(".current-weather-summary").on("click","a.favorite.<%= zip_code.id %>", function(event) {
+    //   event.preventDefault();
+    //   var that = this;
+    //
+    //   if ($(this).hasClass("true")) {
+    //     $.ajax({
+    //       url: '<%= modify_favorite_zip_code_links_url + "?zip_code_id=#{zip_code.id}" %>',
+    //       type: "DELETE",
+    //       success: changeStarToUnfavorited(that)
+    //     });
+    //   } else {
+    //     $.ajax({
+    //       url: '<%= modify_favorite_zip_code_links_url + "?zip_code_id=#{zip_code.id}" %>',
+    //       type: "POST",
+    //       success: changeStarToFavorited(that)
+    //     });
+    //   };
+    // });
 
-    $(".current-weather-summary").on("click","a.favorite#<%= zip_code.id %>", function(event) {
-      event.preventDefault();
-      var that = this;
 
-      if ($(this).hasClass("true")) {
-        $.ajax({
-          url: '<%= modify_favorite_zip_code_links_url + "?zip_code_id=#{zip_code.id}" %>',
-          type: "DELETE",
-          success: changeStarToUnfavorited(that)
-        });
-      } else {
-        $.ajax({
-          url: '<%= modify_favorite_zip_code_links_url + "?zip_code_id=#{zip_code.id}" %>',
-          type: "POST",
-          success: changeStarToFavorited(that)
-        });
-      };
-    });
   });
 </script>
