Removes redirects after they're used. Adds photo carrousel to zip code show page.

--- a/app/assets/stylesheets/zip_codes/carrousel.css
+++ b/app/assets/stylesheets/zip_codes/carrousel.css
@@ -1,12 +1,12 @@
 #carrousel {
   display:block;
   position: relative;
-/*  height: 200px;*/
-/*  width: 400px;*/
-  height:auto;
-  width:auto;
+  height: 300px;
+  width: 400px;
+/*  height:auto;*/
+/*  width:auto;*/
 /*  margin: 100px auto 20px auto;*/
-/*  overflow: hidden;*/
+  overflow: hidden;
   border: 1px solid #999;
 }
 
@@ -25,27 +25,20 @@
 
 #carrousel > ul > li {
   float: left;
-/*  width: 400px;*/
-/*  height: 200px;*/
-/*  background: blue;*/
-  height:auto;
-  width:auto;
-/*  font-size: 30px;*/
-/*  text-align: center;*/
+  width: 400px;
+  height: 300px;
+  background: transparent;
+/*  height:auto;*/
+/*  width:auto;*/
+  font-size: 30px;
+  text-align: center;
 }
 
 #carrousel > ul > li:nth-child(even) {
 /*  background: green;*/
 }
 
-#carrousel-nav {
-  text-align: center;
-}
-
-#carrousel-nav > span {
-  cursor: pointer;
-}
-
-#carrousel-nav > span:hover {
-  text-decoration: underline;
+img.carrousel-photo {
+  width: 400px;
+  max-height: 300px;
 }
