--- a/app/views/users/_details.html.erb
+++ b/app/views/users/_details.html.erb
@@ -68,12 +68,13 @@
         <label for="celsius">Celsius</label>
     </section>
 
-
-    <label for="bio">Bio:</label>
-    <br>
-    <textarea name="user[bio]" id="bio"><%= @user.try(:bio) %></textarea>
-    <br>
-    <label for="bio">(140 characters max)</label>
+    <section class="bio">
+      <label for="bio">Bio:</label>
+      <br>
+      <textarea name="user[bio]" id="bio"><%= @user.try(:bio) %></textarea>
+      <br>
+      (140 characters max)
+    </section>
 
     <section class="avatars group">
       <% if mode == :edit %>
