--- a/app/views/nav_bar_dropdowns/_notifications.html.erb
+++ b/app/views/nav_bar_dropdowns/_notifications.html.erb
@@ -1,8 +1,8 @@
 <!-- /app/views/layouts/nav_bar_dropdowns/notifications.html.erb -->
 
-<h3 class="section-title">
+<!-- <h3 class="section-title">
   Notifications
-</h3>
+</h3> -->
 
 <ul>
 
