--- a/app/views/nav_bar_dropdowns/_user_menu.html.erb
+++ b/app/views/nav_bar_dropdowns/_user_menu.html.erb
@@ -4,9 +4,9 @@
 
 <% if signed_in? %>
 
-  <h3 class="section-title">
+  <!-- <h3 class="section-title">
     <a href="<%= user_gallery_url(current_user) %>">Hello, <%= current_user.user_name %></a>
-  </h3>
+  </h3> -->
 
 
   <ul class="group">
