--- a/app/views/zip_codes/show.html.erb
+++ b/app/views/zip_codes/show.html.erb
@@ -39,7 +39,8 @@
 
       <canvas
         id="conditions-chart"
-        class="percentages hidden"></canvas>
+        class="percentages hidden"
+        height="200" width="330"></canvas>
   </section>
 
 
