--- a/app/views/zip_codes/_zip_code_picker.html.erb
+++ b/app/views/zip_codes/_zip_code_picker.html.erb
@@ -1,10 +1,10 @@
-<h2 class="section-title">Get the weather!</h2>
+<h3 class="section-title">Get the weather!</h3>
 
 <form action="<%= search_zip_codes_url %>" method="get" class="input">
 
   <%= insert_form_authenticity_token %>
 
-  <input type="text" name="search_query" value="" id="search_query" placeholder="Zip Code">
+  <input type="text" name="search_query" value="" id="search_query" placeholder="Zip Code or City">
 
   <input class="submit" type="submit" value="Search">
 </form>
